--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .header_text {
   color: #111;
-  font-size: 36px !important;
-  font-family: 'Poppins-Medium' !important;
+  font-size: 24px !important;
+  font-family: 'Poppins-Black' !important;
 }
 
 .header_button {
@@ -13,9 +13,12 @@
 }
 
 .drawer_heading {
-  padding: 5px;
+  position: relative;
+  display: block;
+  padding: 15px;
   margin: 0;
   color: #111;
+  text-align: center;
   font-size: 24px !important;
   font-family: 'Poppins-Black' !important;
 }
