--- a/src/style/deposit_screen.css
+++ b/src/style/deposit_screen.css
@@ -44,6 +44,7 @@
 
 h3 {
     font-size: 16px;
+    text-transform: capitalize;
     font-family: Poppins-Black;
 }
 
@@ -109,4 +110,17 @@ h3 {
 
 .card_form .btn:hover::before {
     width: 100%;
+}
+
+ul {
+    list-style-type: decimal;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 0;
+}
+
+ul li {
+    font-size: 16px;
 }
