--- a/src/style/home_screen.css
+++ b/src/style/home_screen.css
@@ -71,6 +71,7 @@ h3 {
     overflow: hidden !important;
     border: 1px solid transparent;
     border-radius: 10px !important;
+    border-bottom: 3px solid #009FFF;
 }
 
 
@@ -87,12 +88,13 @@ h3 {
     border-radius: 50% !important;
 }
 
-.list_item .list_avatar img {
+.list_item .list_avatar .list_avatar_img {
     position: relative;
     display: block;
     margin: auto;
     width: 50%;
     height: 100%;
+    fill:#009FFF;
     object-fit: contain;
 }
 
