--- a/src/style/login_screen.css
+++ b/src/style/login_screen.css
@@ -1,62 +1,37 @@
-.address {
-    background-color: #e5771b;
-    color: black;
-    padding: 5px;
-    border-radius: 5px;
-    border: none;
-}
-
-.card_form {
-    position: relative;
-    display: block;
-    padding: 15px;
-    max-width: 480px;
-    margin: 15px auto;
-    padding-bottom: 5px;
-    background: #ffffff;
-    overflow: hidden !important;
-    border-radius: 15px !important;
-    border: 1px solid transparent;
-    box-shadow: 0px 8px 16px 0 rgb(0 0 0 / 10%) !important;
-}
-
-h3 {
+.box_form .form-control {
+    margin: 15px;
+    width: calc(100% - 30px);
     font-size: 16px;
-    font-family: Poppins-Black;
+    font-family: Poppins-Light;
 }
 
-img {
-    position: relative;
-    display: block;
-    width: 96px;
-    height: 96px;
-    margin: auto;
-    object-fit: contain;
-    margin-bottom: 45px;
+.box_form .form-control input,
+.box_form .form-control label,
+.box_form .form-control fieldset legend span {
+    font-family: Poppins-Regular !important;
 }
 
-.card_form .connect-btn {
+.box_form .btn-submit {
     position: relative;
-    display: block;
     z-index: 1;
-    width: 100%;
+    width: calc(100% - 30px);
     border: unset;
-    margin: auto;
     font-size: 16px;
     color: #ffffff;
     overflow: hidden;
+    margin: auto 15px;
     padding: 15px 25px;
     border-radius: 10px;
     transition: all 250ms;
     background: #e8e8e8;
     text-transform: capitalize;
     font-family: Poppins-Light;
-    background: -webkit-linear-gradient(right, #e5771b, #753d16);
+    background-color: #0051FF;
     -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
     box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
 }
 
-.card_form .connect-btn::before {
+.box_form .btn-submit::before {
     content: "";
     position: absolute;
     top: 0;
@@ -64,17 +39,93 @@ img {
     height: 100%;
     width: 0;
     border-radius: 10px;
-    background: -webkit-linear-gradient(right, #e5771b, #e5771b);
+    background-color: #212121;
     z-index: -1;
     -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
     box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
     transition: all 250ms
 }
 
-.card_form .connect-btn:hover {
+.box_form .btn-submit:hover {
     color: #e8e8e8;
 }
 
-.card_form .connect-btn:hover::before {
+.box_form .btn-submit:hover::before {
     width: 100%;
+}
+
+.box_form {
+    position: relative;
+    display: block;
+    padding: 15px;
+    margin: auto;
+    max-width: 480px;
+    background: #ffffff;
+    overflow: hidden;
+    border-radius: 15px;
+    border: 1px solid transparent;
+    box-shadow: 0px 8px 16px 0 rgb(0 0 0 / 10%);
+}
+
+.box_container {
+    position: relative;
+    display: grid;
+    padding: 0px;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(45deg, #009FFF, #0051FF);
+}
+
+.box_container::-webkit-scrollbar {
+    width: 3px;
+}
+
+/* Track */
+.box_container::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.35);
+    cursor: pointer;
+    border-radius: 0px;
+    border: none;
+}
+
+/* Handle */
+.box_container::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    border-radius: 10px;
+    transition: ease-in-out 0.2s;
+}
+
+.box_form .box_tab {
+    padding: 12px 45px;
+    text-transform: capitalize;
+    font-family: 'Poppins-Bold';
+    font-size: 16px;
+    color: black;
+}
+
+.p, p {
+    padding: 15px;
+    font-size: 16px;
+    font-family: Poppins-Light !important;
+}
+
+a {
+    color: #073fb8 !important;
+}
+
+h2 {
+    font-size: 26px;
+    text-transform: capitalize;
+    font-family: Poppins-regular;
+}
+
+.errortxt {
+    font-size: 16px !important;
+    margin: auto 15px !important;
+    width: calc(100% - 60px) !important;
+    text-transform: capitalize !important;
+    font-family: Poppins-Light !important;
 }
